syntax = "proto3";
import "google/protobuf/any.proto";

package frequentation;
option go_package = "./frequentationPB";

service Frequentation {
    rpc DataList(ListRequest) returns (ListResponse);
}

message Data {
        string uic_code = 1;
        string zipcode = 2;
        int32 a2015 = 3;
        int32 a2016 = 4;
        int32 a2017 = 5;
        int32 a2018 = 6;
        int32 a2019 = 7;
        int32 a2020 = 8;
        int32 a2021 = 9;
}

message ListRequest {
        int64 offset = 1;
        int64 limit = 2;
}

message ListResponse {
        repeated Data data = 1;
}